--- a/app/assets/stylesheets/externals/antd-alert.less
+++ b/app/assets/stylesheets/externals/antd-alert.less
@@ -30,12 +30,12 @@
   }
 
   .ant-alert-info {
-    background: var(--alert-background-color);
-    border: 1px solid var(--alert-border-color);
+    background: var(--alert-info-background-color);
+    border: 1px solid var(--alert-info-border-color);
   }
 
   .ant-alert-info .ant-alert-icon {
-    color: var(--alert-icon-color);
+    color: var(--alert-info-icon-color);
   }
 
   .ant-alert-warning {
@@ -61,6 +61,6 @@
   }
 
   .ant-alert-warning .ant-alert-icon {
-    color: var(--alert-icon-color);
+    color: var(--alert-info-icon-color);
   }
 }
