--- a/app/assets/stylesheets/externals/antd-breadcrumbs.less
+++ b/app/assets/stylesheets/externals/antd-breadcrumbs.less
@@ -1,6 +1,9 @@
 &,
 .dark-theme,
 .light-theme {
+  --breadcrumbs-color: var(--color-list-item-clickable);
+  --breadcrumbs-last-color: var(--color-full);
+
   .ant-breadcrumb {
     font-size: 12px;
 
