--- a/app/assets/stylesheets/externals/antd-drawer.less
+++ b/app/assets/stylesheets/externals/antd-drawer.less
@@ -1,12 +1,15 @@
 &,
 .dark-theme,
 .light-theme {
+  --drawer-background-color: var(--color-background);
+  --drawer-header-background-color: var(--header-background-color);
+
   .ant-drawer-content {
     background-color: var(--drawer-background-color);
   }
 
   .ant-drawer-header {
     background-color: var(--drawer-header-background-color);
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--color-border);
   }
 }
