--- a/app/assets/stylesheets/externals/antd-link.less
+++ b/app/assets/stylesheets/externals/antd-link.less
@@ -1,6 +1,9 @@
 &,
 .dark-theme,
 .light-theme {
+  --a-link: var(--color-primary-900);
+  --a-link-hover: var(--color-primary-700);
+
   a {
     color: var(--a-link);
 
