--- a/app/assets/stylesheets/externals/antd-notification.less
+++ b/app/assets/stylesheets/externals/antd-notification.less
@@ -7,6 +7,6 @@
 
 
     .ant-notification-hook-holder, .ant-notification-notice {
-        background: var(--background-color);
+        background: var(--color-background);
     }
 }
