--- a/app/assets/stylesheets/externals/antd-picker.less
+++ b/app/assets/stylesheets/externals/antd-picker.less
@@ -6,7 +6,7 @@
   }
 
   .ant-picker-panel-container {
-    background: var(--background-color);
+    background: var(--color-background);
   }
 
   .ant-picker-today-btn {
