--- a/app/assets/stylesheets/externals/antd-popover.less
+++ b/app/assets/stylesheets/externals/antd-popover.less
@@ -1,6 +1,8 @@
 &,
 .dark-theme,
 .light-theme {
+  --popover-background-color: var(--color-background);
+
   .ant-popover-inner,
   .ant-popover-inner-content {
     background: var(--popover-background-color);
