--- a/app/assets/stylesheets/externals/antd-steps.less
+++ b/app/assets/stylesheets/externals/antd-steps.less
@@ -22,12 +22,12 @@
 
   .ant-steps-item-finish > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-description,
   .ant-steps-item-finish > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title {
-    color: var(--full-color);
+    color: var(--color-full);
   }
 
   .ant-steps-item-process > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-description,
   .ant-steps-item-process > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title {
-    color: var(--full-color);
+    color: var(--color-full);
   }
 
   .ant-steps-item-process > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title {
