--- a/app/assets/stylesheets/externals/antd-tabs.less
+++ b/app/assets/stylesheets/externals/antd-tabs.less
@@ -11,19 +11,19 @@
 
   .ant-tabs-card.ant-tabs-top > .ant-tabs-nav .ant-tabs-tab-active,
   .ant-tabs-card.ant-tabs-top > div > .ant-tabs-nav .ant-tabs-tab-active {
-    background: var(--background-color);
+    background: var(--color-background);
   }
 
   .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn,
   .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active {
     background: transparent;
-    border-color: var(--border-color);
-    color: var(--full-color);
+    border-color: var(--color-border);
+    color: var(--color-full);
   }
 
   .ant-tabs-card > .ant-tabs-nav .ant-tabs-tab,
   .ant-tabs-card > div > .ant-tabs-nav .ant-tabs-tab {
-    border-color: var(--border-color);
+    border-color: var(--color-border);
     border-left: 0;
     border-top: 0;
   }
@@ -39,6 +39,6 @@
   .ant-tabs-bottom > .ant-tabs-nav::before,
   .ant-tabs-top > div > .ant-tabs-nav::before,
   .ant-tabs-bottom > div > .ant-tabs-nav::before {
-    border-color: var(--border-color);
+    border-color: var(--color-border);
   }
 }
