--- a/app/assets/stylesheets/externals/antd-tooltip.less
+++ b/app/assets/stylesheets/externals/antd-tooltip.less
@@ -1,6 +1,8 @@
 &,
 .dark-theme,
 .light-theme {
+  --tooltip-background-color: var(--color-dark);
+
   .ant-tooltip-inner {
     background: var(--tooltip-background-color);
   }
