--- a/app/assets/stylesheets/externals/antd-typography.less
+++ b/app/assets/stylesheets/externals/antd-typography.less
@@ -1,6 +1,9 @@
 &,
 .dark-theme,
 .light-theme {
+  --typography-code-background: transparent;
+  --typography-code-color: var(--color-primary-900);
+
   .ant-typography code {
     background: var(--typography-code-background);
     border: 0;
