--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -18,6 +18,12 @@
 @import "antd-notification.less";
 @import "antd-link.less";
 
+:root {
+  --input-border-color: var(--color-input-border);
+  --input-border-hover-color: var(--color-primary-900);
+  --input-border-focus-color: var(--color-primary-900);
+}
+
 // Fix wrong flex direction of main layout.
 .ant-layout.ant-layout-has-sider {
   flex-direction: row;
