--- a/app/assets/stylesheets/externals/antd-button.less
+++ b/app/assets/stylesheets/externals/antd-button.less
@@ -3,8 +3,8 @@
 .light-theme {
   .ant-btn:hover:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled):not(.ant-btn-text, .ant-btn-link),
   .ant-btn:focus:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled):not(.ant-btn-text, .ant-btn-link) {
-    color: var(--primary-btn-hover-color);
-    border-color: var(--primary-btn-hover-color);
+    color: var(--color-primary-700);
+    border-color: var(--color-primary-700);
   }
 
   .ant-btn-text {
@@ -14,36 +14,36 @@
   .ant-btn-text:hover,
   .ant-btn-text:focus {
     color: var(--text-btn-hover-color);
-    background: var(--text-btn-hover-background-color);
+    background: var(--color-highlight-background);
   }
 
   .ant-btn-link {
-    color: var(--link-btn-color);
+    color: var(--color-primary-700);
   }
 
   .ant-btn-link:hover,
   .ant-btn-link:focus {
-    color: var(--link-btn-hover-color);
-    background: var(--link-btn-hover-background-color);
+    color: var(--color-primary-900);
+    background: #5696ff12;
   }
 
   .ant-btn.ant-btn-primary:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled) {
-    background: var(--primary-btn-color);
-    border-color: var(--primary-btn-color);
+    background: var(--color-primary-500);
+    border-color: var(--color-primary-500);
   }
 
   .ant-btn.ant-btn-primary:hover:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
   .ant-btn.ant-btn-primary:focus:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
   .ant-tag-checkable-checked:hover {
     color: #fff;
-    background: var(--primary-btn-hover-color);
-    border-color: var(--primary-btn-hover-color);
+    background: var(--color-primary-700);
+    border-color: var(--color-primary-700);
   }
 
   .ant-btn.ant-btn-default:hover:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
   .ant-btn.ant-btn-default:focus:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled) {
     color: var(--default-btn-hover-color);
-    border-color: var(--primary-btn-hover-color);
+    border-color: var(--color-primary-700);
   }
 
   .ant-radio-checked .ant-radio-inner,
@@ -59,19 +59,19 @@
 
   .ant-tag-checkable-checked {
     color: #fff;
-    background: var(--primary-btn-color);
-    border-color: var(--primary-btn-color);
+    background: var(--color-primary-500);
+    border-color: var(--color-primary-500);
   }
 
   .ant-btn.ant-btn-primary.ant-btn-background-ghost {
-    color: var(--primary-btn-color);
-    border-color: var(--primary-btn-color);
+    color: var(--color-primary-500);
+    border-color: var(--color-primary-500);
   }
 
   .ant-btn.ant-btn-primary.ant-btn-background-ghost:hover:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
   .ant-btn.ant-btn-primary.ant-btn-background-ghost:focus:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled) {
-    color: var(--primary-btn-hover-color);
-    background: var(--primary-btn-hover-color);
-    border-color: var(--primary-btn-hover-color);
+    color: var(--color-primary-700);
+    background: var(--color-primary-700);
+    border-color: var(--color-primary-700);
   }
 }
