--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -22,7 +22,7 @@
 
   .ant-layout-header {
     background: var(--header-background-color);
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--color-border);
   }
 
   .editable-cell {
@@ -61,7 +61,7 @@
   }
 
   .editable-row:hover .editable-cell-value-wrap {
-    border-color: var(--border-color-flashier);
+    border-color: var(--color-border-flashier);
   }
 
   .ant-table td {
@@ -126,6 +126,8 @@
   }
 
   .ant-progress {
+    --progressbar-success-background-color: var(--color-success);
+
     &.ant-progress-status-success .ant-progress-inner > .ant-progress-bg {
       background-color: var(--progressbar-success-background-color);
     }
@@ -173,11 +175,11 @@
     display: flex;
     flex-direction: column;
     border-radius: 4px;
-    border-color: var(--border-color);
+    border-color: var(--color-border);
 
     .ant-card-actions {
-      background: var(--background-color);
-      border-top-color: var(--border-color);
+      background: var(--color-background);
+      border-top-color: var(--color-border);
     }
 
     .ant-card-head {
@@ -189,11 +191,11 @@
     }
 
     .ant-card-grid {
-      box-shadow: 1px 0 0 0 var(--border-color),
-                  0 1px 0 0 var(--border-color),
-                  1px 1px 0 0 var(--border-color),
-                  1px 0 0 0 var(--border-color) inset,
-                  0 1px 0 0 var(--border-color) inset;
+      box-shadow: 1px 0 0 0 var(--color-border),
+                  0 1px 0 0 var(--color-border),
+                  1px 1px 0 0 var(--color-border),
+                  1px 0 0 0 var(--color-border) inset,
+                  0 1px 0 0 var(--color-border) inset;
     }
   }
 
@@ -213,11 +215,11 @@
   .ant-table-content {
     overflow-x: auto;
     overflow-y: hidden;
-    background: var(--table-background-color);
+    background: var(--color-background);
   }
 
   .ant-table.ant-table-bordered thead > tr > th {
-    background: var(--table-head-background-color);
+    background: var(--color-table-head-background);
   }
 
   .ant-modal-body {
