--- a/app/assets/stylesheets/externals/antd-dark.less
+++ b/app/assets/stylesheets/externals/antd-dark.less
@@ -3,7 +3,7 @@
 
   body {
     color: #fff;
-    background: var(--dark-color);
+    background: var(--color-dark);
   }
 
   h1,
@@ -17,7 +17,7 @@
 
   .ant-menu,
   .ant-menu-submenu-popup > .ant-menu {
-    background: var(--background-color);
+    background: var(--color-background);
   }
 
   // Change selected menu item background color.
@@ -27,7 +27,7 @@
 
   // Set content area background.
   .ant-layout {
-    background: var(--background-color);
+    background: var(--color-background);
   }
 
   .ant-table {
@@ -70,7 +70,7 @@
   }
 
   .ant-collapse-borderless > .ant-collapse-item {
-    border-bottom-color: var(--border-color);
+    border-bottom-color: var(--color-border);
   }
 
   // Remove white background of sortable table columns.
@@ -84,16 +84,16 @@
   }
 
   .ant-layout-sider-trigger {
-    color: var(--main-sidebar-color);
-    background: var(--background-color);
-    border-right: 1px solid var(--border-color);
+    color: var(--color-list-item-clickable);
+    background: var(--color-background);
+    border-right: 1px solid var(--color-border);
 
     &:hover {
-      color: var(--main-sidebar-hover-color);
+      color: var(--color-full);
     }
 
     &:active {
-      color: var(--main-sidebar-active-color);
+      color: var(--color-full);
     }
   }
 
@@ -114,7 +114,7 @@
 
   // Adjus list items separator.
   .ant-list-split .ant-list-item {
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--color-border);
 
     &:last-child {
       border-bottom: none;
@@ -138,45 +138,45 @@
 
   .ant-divider-horizontal.ant-divider-with-text::before,
   .ant-divider-horizontal.ant-divider-with-text::after {
-    border-color: var(--border-color);
+    border-color: var(--color-border);
   }
 
   .ant-progress-success-bg,
   .ant-progress-bg {
-    background: var(--color-primary);
+    background: var(--color-primary-500);
   }
 
   // Fix checkbox color
   .ant-checkbox-wrapper:hover .ant-checkbox-inner,
   .ant-checkbox:hover .ant-checkbox-inner,
   .ant-checkbox-input:focus + .ant-checkbox-inner {
-    border-color: var(--color-primary);
+    border-color: var(--color-primary-500);
   }
 
   .ant-checkbox-checked .ant-checkbox-inner {
-    background: var(--color-primary);
-    border-color: var(--color-primary);
+    background: var(--color-primary-500);
+    border-color: var(--color-primary-500);
   }
 
   .ant-checkbox-checked::after {
-    border-color: var(--color-primary);
+    border-color: var(--color-primary-500);
   }
 
   // Fix copy icon
   .ant-typography-expand:not(.ant-typography-copy-success),
   .ant-typography-edit:not(.ant-typography-copy-success),
   .ant-typography-copy:not(.ant-typography-copy-success) {
-    color: var(--color-primary-light);
+    color: var(--color-primary-700);
 
     &:hover {
-      color: var(--color-primary);
+      color: var(--color-primary-500);
     }
   }
 
   // Fix timeline
   .ant-timeline-item-head-blue {
-    color: var(--color-primary);
-    border-color: var(--color-primary);
+    color: var(--color-primary-500);
+    border-color: var(--color-primary-500);
   }
 
   // Fix erros
@@ -200,11 +200,11 @@
   // Fix slider
   .ant-slider-track,
   .ant-slider:hover .ant-slider-track {
-    background: var(--color-primary);
+    background: var(--color-primary-500);
   }
 
   .ant-slider-handle {
-    border-color: var(--color-primary) !important;
+    border-color: var(--color-primary-500) !important;
   }
 
   .ant-input {
@@ -252,12 +252,12 @@
 
   .ant-menu-inline,
   .ant-menu-inline-collapsed {
-    border-right: 1px solid var(--border-color);
+    border-right: 1px solid var(--color-border);
   }
 
   .ant-modal-header,
   .ant-modal-content {
-    background: var(--background-color);
+    background: var(--color-background);
   }
 
   .ant-breadcrumb > span:last-child {
@@ -265,12 +265,12 @@
   }
 
   .ant-card {
-    background: var(--background-color);
-    border: 1px solid var(--border-color);
-    color: var(--full-color);
+    background: var(--color-background);
+    border: 1px solid var(--color-border);
+    color: var(--color-full);
 
     .ant-card-head {
-      background: var(--background-color);
+      background: var(--color-background);
     }
   }
 
