--- a/app/assets/stylesheets/externals/antd-light.less
+++ b/app/assets/stylesheets/externals/antd-light.less
@@ -9,14 +9,7 @@
     border-right: 1px solid #f0f0f0;
 
     &:hover {
-      color: var(--color-primary);
-    }
-  }
-
-  .ant-layout-sider-collapsed {
-    .ant-layout-sider-trigger {
-      color: var(--color-primary);
-      background: var(--primary-light-color);
+      color: var(--color-primary-500);
     }
   }
 }
