Fix editor site filter options styling

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -64,7 +64,7 @@
   --color-full-opacity-85: rgba(255, 255, 255, 0.85);
   --color-full: #fff;
   --color-golden: #fff900;
-  --color-highlight-background: #5696ff12;
+  --color-highlight-background: rgba(255, 255, 255, 0.03);;
   --color-input-border-disabled: #434343;
   --color-input-border: #434343;
   --color-list-item-clickable: #7b8ca0;
