Replace old alerts with new custom alerts

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -41,7 +41,7 @@
   --alert-error-color: #cc3d3f;
   --alert-info-background-color: #f0f6ff;
   --alert-info-border-color: #bad2ff;
-  --alert-info-icon-color: #0d141f;
+  --alert-info-color: var(--color-full);
   --alert-warning-background-color: #ffb75b17;
   --alert-warning-border-color: #996625;
   --alert-warning-color: #fff;
