--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -386,7 +386,7 @@
                     <% if @on_premise %>
                       <p>This is an email from an on-premise Texterify instance which is not officially affiliated with the cloud version of Texterify.</p>
                     <% else %>
-                      <p>&copy; Texterify, aaa – all about apps GmbH, Mollardgasse 70C / TOP 5, A-1060 Wien</p>
+                      <p>&copy; Texterify, Voidly e.U., A-1100 Wien</p>
                       <p>
                         Visit <a href="https://texterify.com">texterify.com</a> for more information.
                       </p>
