--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -3,7 +3,7 @@
 
 <h1>Welcome to Texterify</h1>
 
-<p>Hello <%= @username %>,</p>
+<p>Hello <%=h @username %>,</p>
 
 <p>thank you for signing up.</p>
 
