--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -2,7 +2,7 @@
 <% content_for :preheader do %>Instructions to reset your password<% end %>
 
 <h1>Reset your password</h1>
-<p><%= t(:hello).capitalize %> <%= @resource.username %>,</p>
+<p><%=h t(:hello).capitalize %> <%=h @resource.username %>,</p>
 <p><%= t '.request_reset_link_msg' %></p>
 
 <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
