#176: Make tables more compact

--- a/app/assets/stylesheets/externals/antd.less
+++ b/app/assets/stylesheets/externals/antd.less
@@ -43,3 +43,7 @@ table tr th.ant-table-selection-column,
 table tr td.ant-table-selection-column {
   padding: 0 16px;
 }
+
+.ant-table-tbody > tr > td {
+  padding: 8px 16px !important;
+}
